Changes from beta 1:
Emulation fixes:
 - ARM: Fix STR writeback pipeline stage
 - ARM: Partially fix LDM/STM writeback with empty register list
 - ARM: Fix stepping when events are pending
 - GBA DMA: Fix case where DMAs could get misaligned (fixes mgba.io/i/1092)
 - GBA Memory: Fix open bus from IWRAM (fixes mgba.io/i/1575)
 - GBA Timers: Improve timer startup emulation
 - GBA Video: Fix OpenGL renderer 512x512 backgrounds (fixes mgba.io/i/1572)
 - GBA Video: Fix BLDY for semitransparent sprite on non-target-2 backgrounds
 - GBA Video: Fix effects blending improperly in some non-last windows
 - GBA Video: Copy higher priority target 1 flag
Other fixes:
 - 3DS: Fix screen darkening (fixes mgba.io/i/1562)
 - Core: Fix uninitialized memory issues with graphics caches
 - Core: Return null for out of bounds cached tile VRAM querying
 - Debugger: Fix tracing skipping instructions (fixes mgba.io/i/1614)
 - OpenGL: Only invalidate texture if dimensions change (fixes mgba.io/i/1612)
 - Qt: Fix fast forward mute being reset (fixes mgba.io/i/1574)
 - Qt: Fix scrollbar arrows in memory view (fixes mgba.io/i/1558)
 - Qt: Fix several cases where shader selections don't get saved
 - Qt: Fix division by zero error in invalid TilePainter state
 - Qt: Fix "restart needed" dialog after first config (fixes mgba.io/i/1601)
 - Qt: Fix undesired screen filtering when paused (fixes mgba.io/i/1602)
 - Qt: Fix sprite view using wrong base address (fixes mgba.io/i/1603)
 - Qt: Fix inability to clear default keybindings
 - Qt: Release held actions if they get rebound
 - Vita: Fix analog controls (fixes mgba.io/i/1554)
 - Wii: Fix game fast-forwarding after slowing down
 - Wii: Improve audio buffering (fixes mgba.io/i/1617)
Misc:
 - GB Memory: Support manual SRAM editing (fixes mgba.io/i/1580)
 - GBA Audio: Redo channel 4 batching for GBA only
 - GBA I/O: Stop logging several harmless invalid register reads
 - Debugger: Separate aliases from main commands