@@ -92,6 +92,7 @@ Emulation fixes:
  - ARM: Fix stepping when events are pending
  - GBA DMA: Fix case where DMAs could get misaligned (fixes mgba.io/i/1092)
  - GBA Memory: Fix open bus from IWRAM (fixes mgba.io/i/1575)
+ - GBA Memory: Improve gamepak prefetch timing
  - GBA Timers: Improve timer startup emulation
  - GBA Video: Fix OpenGL renderer 512x512 backgrounds (fixes mgba.io/i/1572)
  - GBA Video: Fix BLDY for semitransparent sprite on non-target-2 backgrounds
